[tool.poetry]
name = "csvapi"
version = "1.3.0.dev"
description = "An instant JSON API for your CSV"
authors = ["Opendatateam <opendatateam@data.gouv.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4"
click_default_group = "^1.2.2"
click = "^8.1.3"
agate = "^1.6.1"
agate-sql = "^0.5.5"
aiohttp = "^3.7.3"
validators = "^0.18.2"
agate-excel = "^0.2.3"
Quart = "^0.18.0"
quart-cors = "^0.5.0"
sentry-sdk = "^1.0.0"
cchardet = "^2.1.7"
python-stdnum = "^1.15"
aiosqlite = "^0.16.1"
pandas = "^1.4.3"
pandas-profiling = "^3.2.0"
requests = "^2.27.1"
udata-event-service = "^0.0.8"
boto3 = "^1.21.21"

[tool.poetry.dev-dependencies]
aioresponses = "^0.7.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
flake8 = "^5.0.4"
pytest-cov = "^2.5.1"

[tool.poetry.scripts]
csvapi = "csvapi.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
