[tool.poetry]
name = "csvapi"
version = "2.2.1.dev"
description = "An instant JSON API for your CSV"
authors = ["Opendatateam <opendatateam@data.gouv.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4"
click_default_group = "~1.2.2"
click = "~8.1.3"
agate = "~1.6.3"
agate-sql = "~0.5.8"
aiohttp = "~3.8.1"
validators = "~0.20.0"
agate-excel = "~0.2.5"
Quart = "~0.18.0"
quart-cors = "~0.5.0"
sentry-sdk = "~1.9.8"
cchardet = "~2.1.7"
python-stdnum = "~1.17"
aiosqlite = "~0.17.0"
pandas = "~1.4.4"
pandas-profiling = "~3.2.0"
requests = "~2.28.1"
boto3 = "~1.24.66"
csv-detective = "~0.4.6"

[tool.poetry.dev-dependencies]
aioresponses = "~0.7.3"
pytest = "~7.1.3"
pytest-asyncio = "~0.19.0"
flake8 = "~5.0.4"
pytest-cov = "~3.0.0"
bumpr = "^0.3.8"

[tool.poetry.scripts]
csvapi = "csvapi.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
